# PortPal

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  process_control.rs  process_info.rs  scanner.rs
src/components/: PortPalIcon.tsx
src/services/: portpalTauri.ts  userPreferences.ts
