[package]
name = "portpal"
version = "0.1.0"
description = "PortPal - 轻量级开发者端口管理工具"
authors = ["PortPal Team"]
edition = "2021"

[lib]
name = "portpal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
opener = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
window-vibrancy = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Networking_WinSock", "Win32_System_Threading"] }
